[package]
name = "kdbush-rs"
version = "0.1.0"
authors = ["Vladimir Agafonkin <agafonkin@gmail.com>", "Andrew Pendleton <andrew@mapbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"
genawaiter = "0.99.1"

[dev-dependencies]
once_cell = "1.3.1"
rand = "0.7.3"
static-bushes = { path = "../flatbush-rs/" }