[package]
name = "static-bushes"
version = "0.1.2"
description = "Rust ports of the kdbush and flatbush npm packages"
repository = "https://github.com/apendleton/static-bushes"
authors = ["Vladimir Agafonkin <agafonkin@gmail.com>", "Andrew Pendleton <andrew@andrewpendleton.net>"]
keywords = ["geo", "geospatial"]
readme = "README.md"
license = "ISC"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
genawaiter = "0.99.1"

[dev-dependencies]
once_cell = "1.3.1"
rand = "0.7.3"
criterion = "0.3.3"

[[bench]]
name = "benches"
harness = false